# graffitihouse

./: .browserlistrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CITATION.cff  Makefile  README.md  docker-compose.yml  docker-compose.yml.j2  graffiti.dbml  package.json  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_is_contributor_and_more.py  0002_alter_customuser_is_staff.py  0003_alter_customuser_is_contributor_and_more.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py
graffiti/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
graffiti/migrations/: 0001_initial.py  0002_alter_graffitiphoto_identifier.py  0002_ancillarysource_tags_graffitiwall_tags_person_tags_and_more.py  0002_graffitihaspart_canvas_graffitihaspart_image.py  0002_remove_ancillarysource_rights_and_more.py  0002_remove_graffitiphoto_canvas_and_more.py  0003_alter_ancillarysource_access_rights_and_more.py  0003_alter_graffitiwall_spatial_position.py  0003_alter_location_address_alter_location_city_and_more.py  0003_graffitihaspart_name.py  0003_person_first_name_person_last_name_and_more.py  0004_articlecontent_alter_graffitiwall_description.py  0004_graffiti_tags_graffitihaspart_related_graffiti.py  0004_remove_alias_alias_type.py  0004_remove_graffitiwall_has_part_and_more.py  0004_remove_site_date_alter_person_date_of_birth_and_more.py  0005_alias_alter_ancillarysource_contributor_and_more.py  0005_alter_graffitiwall_description_delete_articlecontent.py  0005_ancillarysource_archive_person_tag_and_more.py  0005_person_associated_graffiti_photo_and_more.py  0005_remove_person_name.py  0006_alias_person.py  0006_alter_metadatafordeeds_grantee_and_more.py  0006_graffitiphoto_canvas_coords_and_more.py  0006_remove_graffitiphoto_has_part.py  0006_remove_graffitiphoto_name_graffitiphoto_created_at_and_more.py  0007_alter_graffitiphoto_graffiti_type_and_more.py  0007_ancillarysource_image_alter_graffitiwall_house_id_and_more.py  0007_archive_box_archive_folder.py  0007_graffitiphoto_coordinates.py  0008_remove_ancillarysource_archive_and_more.py  0008_remove_ancillarysource_tags_remove_graffitiwall_tags_and_more.py  0008_remove_graffitihaspart_part_id_and_more.py  0008_remove_graffitiphoto_related_graffiti.py  0009_ancillarysource_tags_graffitiwall_tags_house_tags_and_more.py  0009_historicalgraffitiphoto_historicalgraffitiwall_and_more.py  0009_rename_graffiti_id_graffitiphoto_graffiti_wall_and_more.py  0009_rename_metadatafordeeds_metadatafordeed_and_more.py  0010_alter_ancillarysource_tags_alter_graffitiwall_tags_and_more.py  (+4 more)
houses/: asgi.py  settings.py  urls.py  wsgi.py
multispectral/: apps.py  models.py
pages/: urls.py  views.py
people/: models.py  urls.py  views.py
source/: models.py
static/css/: custom_admin.css
templates/: 404.html  base.html  home.html
(+18 files in other folders)
