[tool.poetry]
name = "graffitihouse"
version = "0.1.0"
description = "Web application for Graffiti House"
authors = ["Jason Heppler <jason.heppler@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.8"
django-extensions = "^4.1"
Pillow = "^11.2.1"
django-tailwind = "^4.0.1"
django-browser-reload = "^1.18.0"
psycopg2 = "^2.9.5"
python-dotenv = "^1.1.0"
django-environ = "^0.12.0"
django-prose = "^2.1.0"
django-admin-interface = "^0.30.0"
django-multiselectfield = "^0.1.12"
django-debug-toolbar = "^5.1.0"
django-import-export = "^4.3.7"
geopy = "^2.4.1"
django-dbml = "^0.10.1"
django-taggit = "^6.1.0"
taggit-selectize = "^2.11.0"
django-leaflet = "^0.31.0"
django-simple-history = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
djhtml = "^3.0.6"
pre-commit = "^4.2.0"
pytest-sugar = "^1.0.0"
pytest-django = "^4.11.1"
pylint-django = "^2.5.3"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
